[package]
name = "sample1"
version = "0.1.0"
authors = ["marc2332 <mespinsanz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calcite = "0.1.1"
orbtk = { git = "https://github.com/redox-os/orbtk.git", branch = "develop" }
deno_core = "0.49.0"
orbtk-api = "0.3.1-alpha2"
serde_derive = "1.0.114"
serde = "1.0.114"
orbtk-widgets = "0.3.1-alpha2"
dces = { git = "https://gitlab.redox-os.org/redox-os/dces-rust.git",  branch = "develop" }

[lib]
crate-type = ["cdylib"]
name = "ankilo"
path = "src/lib.rs"

